@@ -2,6 +2,8 @@
 changes relative to sbcl-1.4.0:
   * optimization: faster foreign callbacks.
   * enhancement: complex arrays can be stack allocated.
+  * bug fix: SB-INTROSPECT:ALLOCATION-INFORMATION works on big-endian CPUs
+    (fixes lp#490490 for real rather than by disabling a test)
 
 changes in sbcl-1.4.0 relative to sbcl-1.3.21:
   * minor incompatible change: DESTRUCTURING-BIND treats non-toplevel () as
